Re-arrange header section
Re-positioned elements in header & navigation section so they align.
Styled buttons.

--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
         <meta charset="utf-8">
         <meta name="viewport" device="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500&display=swap" rel="stylesheet">
         <title>Landing Page | Odin </title>
     </head>
     <body>
         <nav class="row">
             <div class="links left">
-                <h3>Name of Company</h3>
+                <h3>Natural by Ney</h3>
                 <img src="https://picsum.photos/id/31/70/70.jpg" alt="">
             </div>
             <ul class="links right">
@@ -24,8 +27,8 @@
                     <h1>Main heading</h1>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat nam temporibus sapiente repellendus voluptates maiores ea! Consequatur iste quasi temporibus.</p>
                     <button>Sign up</button>
-                <img src="https://picsum.photos/id/31/300/120.jpg" alt="">
-                </div>
+                </div>   
+                <img class="second" src="https://picsum.photos/id/31/700/220.jpg" alt="">
             </header>
             <section>
                 <h2>Second heading</h2>
