Position last last 2 sections & footer
Aligned quote & sign-up sections and footer to match mock-up design.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav class="row">
             <div class="links left">
                 <h3>Natural by Ney</h3>
-                <img src="https://picsum.photos/id/31/70/70.jpg" alt="">
+                <img src="https://picsum.photos/id/31/40/40.jpg" alt="">
             </div>
             <ul class="links right">
                     <li><a href="https://www.google.com">link one</a></li>
@@ -21,36 +21,50 @@
                     <li><a href="https://www.google.com">Link three</a></li>
             </ul>   
         </nav>
-        <main>
-            <header class="row header">
+        <header class="header">
                 <div class="top column">
                     <h1>Main heading</h1>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat nam temporibus sapiente repellendus voluptates maiores ea! Consequatur iste quasi temporibus.</p>
-                    <button>Sign up</button>
+                    <p class="header">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat nam temporibus sapiente repellendus voluptates maiores ea! Consequatur iste quasi temporibus.</p>
+                    <button class="head">Sign up</button>
                 </div>   
-                <img class="second" src="https://picsum.photos/id/31/700/220.jpg" alt="">
-            </header>
-            <section>
-                <h2>Second heading</h2>
-                <div class="row four-cards">
-                    <img src="https://picsum.photos/id/31/100/100.jpg" alt="">
-                    <img src="https://picsum.photos/id/31/100/100.jpg" alt="">
-                    <img src="https://picsum.photos/id/31/100/100.jpg" alt="">
-                    <img src="https://picsum.photos/id/31/100/100.jpg" alt="">
+                <img class="second" src="https://picsum.photos/id/31/500/220.jpg" alt="">
+        </header>
+        <section class="cards">
+            <h2>Second heading</h2>
+            <div class="card-container">
+                <div class="content">
+                        <div class="card-img"></div>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium, nihil.</p>
                 </div>
-            </section>
-            <section class="row quote">
-                <blockquote>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde, inventore.</blockquote>
-                <cite>Author</cite>
-            </section>
-            <section class="row sign-up">
-                <div class="column">
+                <div class="content">
+                        <div class="card-img"></div>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium, nihil.</p>
+                </div>
+                <div class="content">
+                        <div class="card-img"></div>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium, nihil.</p>
+                </div>
+                <div class="content">
+                        <div class="card-img"></div>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium, nihil.</p>
+                </div>
+            </div>
+        </section>
+        <section class="quote">
+            <blockquote>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt deleniti neque laborum quos rem repellat quas a voluptates atque dolor..</blockquote>
+            <cite>Author</cite>
+        </section>
+        <section class="sign-up">
+            <div class="sign">
+                <div class="row">
                     <h4>Lorem ipsum dolor sit amet.</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, vitae.</p>
                 </div>
-                <button>Sign up</button>
-            </section>
-        </main>
+                <div class="row">
+                    <button>Sign up</button> 
+                </div>    
+             </div>
+        </section>
         <footer>
             <p>Copyright C The Odin Project 2021</p> 
         </footer>
