--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
         <nav class="row">
             <div class="links left">
                 <h3>Natural by Ney</h3>
-                <img src="https://picsum.photos/id/31/40/40.jpg" alt="">
+                <img class="logo" src="images/shea-logo.jpg" alt="company logo" width="80" height="50">
             </div>
             <ul class="links right">
-                    <li><a href="https://www.google.com">link one</a></li>
-                    <li><a href="https://www.google.com">Link two</a></li>
-                    <li><a href="https://www.google.com">Link three</a></li>
+                    <li><a href="https://instagram.com/muzuri_gold_fans?igshid=MzRIODBiNWFIZA=="><img src="images/instagram.png" alt="Instagram page" width="30" height="30"></a></li>
+                    <li><a href="https://instagram.com/muzuri_gold_fans?igshid=MzRIODBiNWFIZA=="><img src="images/facebook.png" alt="Facebook page" width="30" height="30"></a></li>
+                    <li><a href="https://instagram.com/muzuri_gold_fans?igshid=MzRIODBiNWFIZA=="><img src="images/linkedin.png" alt="LinkedIn page" width="30" height="30"></a></li>
             </ul>   
         </nav>
         <header class="header">
                 <div class="top column">
-                    <h1>Main heading</h1>
-                    <p class="header">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat nam temporibus sapiente repellendus voluptates maiores ea! Consequatur iste quasi temporibus.</p>
+                    <h1>Unrefined-Raw-Natural</h1>
+                    <p class="header">Natural's shea butter is unrefined, ensuring you of amazing healing properties for your skin and hair.</p>
                     <button class="head">Sign up</button>
                 </div>   
-                <img class="second" src="https://picsum.photos/id/31/500/220.jpg" alt="">
+                <div class="header-img"></div>
         </header>
         <section class="cards">
             <h2>Second heading</h2>
