Fill content & embed images
Changed page content to mock company's mission and 4 images in cards
sections to illustrate uses of mock company's product.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Macondo&family=Roboto+Slab:wght@400;500&family=Shantell+Sans&display=swap" rel="stylesheet">
         <title>Landing Page | Odin </title>
     </head>
     <body>
@@ -16,9 +16,9 @@
                 <img class="logo" src="images/shea-logo.jpg" alt="company logo" width="80" height="50">
             </div>
             <ul class="links right">
-                    <li><a href="https://instagram.com/muzuri_gold_fans?igshid=MzRIODBiNWFIZA=="><img src="images/instagram.png" alt="Instagram page" width="30" height="30"></a></li>
-                    <li><a href="https://instagram.com/muzuri_gold_fans?igshid=MzRIODBiNWFIZA=="><img src="images/facebook.png" alt="Facebook page" width="30" height="30"></a></li>
-                    <li><a href="https://instagram.com/muzuri_gold_fans?igshid=MzRIODBiNWFIZA=="><img src="images/linkedin.png" alt="LinkedIn page" width="30" height="30"></a></li>
+                    <li><a href="https://instagram.com/muzuri_gold_fans?igshid=MzRIODBiNWFIZA=="><img class="socials" src="images/instagram.png" alt="Instagram page" width="30" height="30"></a></li>
+                    <li><a href="https://instagram.com/muzuri_gold_fans?igshid=MzRIODBiNWFIZA=="><img class="socials" src="images/facebook.png" alt="Facebook page" width="30" height="30"></a></li>
+                    <li><a href="https://instagram.com/muzuri_gold_fans?igshid=MzRIODBiNWFIZA=="><img class="socials" src="images/linkedin.png" alt="LinkedIn page" width="30" height="30"></a></li>
             </ul>   
         </nav>
         <header class="header">
@@ -30,35 +30,35 @@
                 <div class="header-img"></div>
         </header>
         <section class="cards">
-            <h2>Second heading</h2>
+            <h2>Shea butter uses</h2>
             <div class="card-container">
                 <div class="content">
-                        <div class="card-img"></div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium, nihil.</p>
+                        <div class="card-img"><img src="images/hair.jpg" alt="african hair" width="140" height="140"></div>
+                        <p><b>Hair care</b><br>Shea butter moisturises and revives dry hair with it's exceptional healing and nourishing ingredient, .</p>
                 </div>
                 <div class="content">
-                        <div class="card-img"></div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium, nihil.</p>
+                        <div class="card-img"><img src="images/skin.jpg" alt="female legs" width="140" height="140"></div>
+                        <p><b>Skin care</b><br>The vitamin A in shea butter can improve a number of skin conditions; blemishes, eczema and dermatitis.</p>
+                    </div>
+                <div class="content">
+                        <div class="card-img"><img src="images/stretch-marks.jpg" alt="stretch marks" width="140" height="140"></div>
+                        <p><b>Stretch marks</b><br>Its nutrients improve the appearance stretch marks by increasing collagen production and reducing inflammation</p>
                 </div>
                 <div class="content">
-                        <div class="card-img"></div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium, nihil.</p>
-                </div>
-                <div class="content">
-                        <div class="card-img"></div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium, nihil.</p>
+                        <div class="card-img"><img src="images/flag.jpg" alt="south african & ghanaian flag" width="140" height="140"></div>
+                        <p><b>Made in Ghana</b><br>The fat extracted from the nut of the African shea tree travels to South Africa to be packaged, retaining 100% of it's raw properties.</p>
                 </div>
             </div>
         </section>
         <section class="quote">
-            <blockquote>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt deleniti neque laborum quos rem repellat quas a voluptates atque dolor..</blockquote>
-            <cite>Author</cite>
+            <blockquote>My skin and 4C-hair have never felt more moisturised. Daily uses leaves my skin feeling soft and my natural curl pattern have emerged. Making the choice to move away from chemicals has made Natural's shea butter a god-sent.</blockquote>
+            <cite>Janet Doe</cite>
         </section>
         <section class="sign-up">
             <div class="sign">
                 <div class="row">
-                    <h4>Lorem ipsum dolor sit amet.</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, vitae.</p>
+                    <h4>Hair care tips and lotions!</h4>
+                    <p>Sign up for monthly shea butter based lotions and hair care tips.</p>
                 </div>
                 <div class="row">
                     <button>Sign up</button> 
@@ -66,7 +66,7 @@
              </div>
         </section>
         <footer>
-            <p>Copyright C The Odin Project 2021</p> 
+            <p>The Odin Project 2023</p> 
         </footer>
     </body>
 </html>
